--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
    <!--
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: Nicole Jenks
+    Date: October 31. 2017
     Filename: index.html
    -->    
     
